# Hibou-Server

./: .env-default  .env.example  .env.exemple  .gitignore  README.md  audio.py  controllers_devices.json  devices.json  logging.conf  main.py  noise_reduction.py  pyproject.toml  requirements.txt  settings.py  test.py  test2.py
.github/workflows/: main.yml  pytest.yml
assets/audio_models/custom_resnet/: model.py
assets/audio_models/custom_resnet_17/: model.py
assets/audio_models/dummy/: model.py
assets/audio_models/resnet50/: model.py
assets/audio_models/vit_base_patch16_224/: model.py
assets/audio_strategies/: music.py
assets/models/: Dummy.pt  Dummy.py  custom_resnet.py  resnet50.py
in/: readme.md
src/: arguments.py  doctor.py  logger.py  settings.py
src/acoustic_analysis/: analyzer.py  data.py
src/acoustic_analysis/strategies/gcc_phat/: strategy.py
src/acoustic_analysis/strategies/te_manu/: display.py  fusion.py  music.py  storage.py  strategy.py  tdoa.py
src/adc_devices/: __init__.py  adc_device_manager.py
src/adc_devices/models/: adc_device.py
src/adc_devices/utils/: static_checkup.py
src/adc_devices/vendors/: base_vendor.py
src/adc_devices/vendors/audinate/: avio_ai2.py
src/adc_devices/vendors/yamaha/: tio1608_d.py
src/ai/: __init__.py  audio.py
src/audio/: angle_of_arrival.py  audio.py  base_source.py  energy.py  file_source.py  gstreamer_engine.py  gstreamer_source.py  multi_channel_queue.py  play.py  utils.py
src/audio/debug/: channel_spectrogram.py  radar.py
src/audio/models/: channel.py
src/audio/processing/: noise_reduction.py
src/audio/sources/: alsa_source.py  file_source.py  gstreamer_source.py  rtp_source.py
src/computer_vision/: __init__.py  detection_recorder.py  drone_detection.py  rtsp_stream.py  utils.py  video_recorder.py  video_source.py
src/computer_vision/models/: yolo_model.py
src/devices/: devices.py  models.py  static_checkup.py  supported_devices.py
src/devices/audio/: audio_device_controller.py
src/devices/audio/controllers/: base_controller.py
src/devices/audio/dante/: models.py  scanner.py
src/devices/audio/utils/: static_checkup.py
src/devices/camera/: ptz_controller.py
src/devices/camera/utils/: calibration.py  ui_controller.py
src/devices/camera/vendors/: base_vendor.py
src/devices/managers/: base.py
src/devices/managers/audinate/: AVIOAI2.py
src/helpers/: decorators.py  json.py  math.py  process_manager.py
src/helpers/ipc/: base_ipc.py  zmqhandler.py
src/helpers/network/: capture.py  interface.py  multicast.py  ping.py
src/modules/audio/: dispatcher.py  worker.py
src/modules/audio/detection/: ai.py
src/modules/audio/devices/: audio_device_controller.py
src/modules/audio/localization/: analyzer.py  energy.py
src/modules/audio/streaming/: __init__.py  gstreamer_engine.py  play.py  utils.py
src/modules/decision/: worker.py
src/modules/vision/: worker.py
src/network/: multicast.py  ustils.py
src/network/helpers/: interface.py  networks.py  ping.py
src/network/protocol/: yamaha_remote_control.py
src/processing/: noise_reduction.py
src/ptz/: calibration.py  ptz.py  ui_controller.py
src/ptz_devices/: ptz_controller.py
src/ptz_devices/utils/: calibration.py  ui_controller.py
src/ptz_devices/vendors/: base_vendor.py
src/tracking/: base_tracker.py  ibvs_tracker.py  pid_tracker.py
src/tracking/utils/: pid_tuning.py
tests/helpers/: test_decorators.py  test_json.py  test_math.py
(+35 files in other folders)
