[project]
name = "hibou"
version = "0.1.0"
description = "Hibou project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "netaudio",
    "noisereduce>=3.0.3",
    "pygobject>=3.54.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "psutil>=7.1.0",
    "pyshark>=0.6",
    "rich>=14.2.0",
    "colorlog>=6.10.1",
    "hikvisionapi>=0.3.2",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.252",
    "pyaudio>=0.2.14",
    "lap==0.5.12",
    "torchaudio>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchcodec>=0.8.1",
    "librosa>=0.11.0",
    "numba>=0.62.1",
    "simple-pid>=2.0.1",
    "timm>=1.0.24",
    "scapy>=2.7.0",
    "pyroomacoustics>=0.9.0",
]

[tool.uv.sources]
netaudio = { git = "https://github.com/BugProg/network-audio-controller.git" }
