[project]
name = "hibou"
version = "0.1.0"
description = "Hibou project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "netaudio",
    "noisereduce>=3.0.3",
    "pygobject>=3.54.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "psutil>=7.1.0",
    "pyshark>=0.6",
    "rich>=14.2.0",
    "colorlog>=6.10.1",
    "hikvisionapi>=0.3.2",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.252",
    "pyaudio>=0.2.14",
    "lap==0.5.12",
    "torchaudio>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchcodec>=0.8.1",
    "librosa>=0.11.0",
    "numba>=0.62.1",
    "simple-pid>=2.0.1",
    "timm>=1.0.24",
    "scapy>=2.7.0",
    "pyroomacoustics>=0.9.0",
]

[tool.uv.sources]
netaudio = { git = "https://github.com/BugProg/network-audio-controller.git" }

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = [".","src"]
testpaths = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v -ra --strict-markers"
markers = [
    "unit: tests unitaires sans dépendance externe",
    "integration: tests d'intégration (FileAudioSource, pipeline audio)",
    "hardware: tests nécessitant un vrai matériel (exclus par défaut)",
]

mock_use_standalone_module = false
mock_traceback_monkeypatch = true

asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
branch = true

omit = [
    "src/audio/debug/*",
    "src/doctor.py",
    "main.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Drone Detection Server — Coverage"


